--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,8 +2,9 @@ ame: CI/CD FOR DEV
 
 on:
   push:
-    branches: [ dev ]
-
+    branches: [ master ]
+  pull_request:
+    branches:  [ master ]
 jobs:
   build:
 
