--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,4 +39,4 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           HEROKU_APP_NAME: java-travelers
-        run: heroku plugins:install java && heroku create --no-remote && heroku deploy:jar staging/githubactions-0.0.1-SNAPSHOT.jar --app github-actions-example
+        run: heroku plugins:install java && heroku create --no-remote && heroku deploy:jar staging/test-0.0.1-SNAPSHOT.jar --app java-travelers
