--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,42 +1,23 @@
-name: CI/CD FOR DEV
 
+name: My Super CI
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches:  [ master ]
+    branches: [ master ]
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Cache Maven packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build
-        run: mvn -B package --file pom.xml
-      - name: Create build path staging
-        run: mkdir staging && cp target/*.jar staging
-      - name: Upload math result for job
-        uses: actions/upload-artifact@v1
-        with:
-          name: example_github_actions
-          path: staging
-      - name: Login to Heroku Container registry
-        env: 
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: heroku container:login
-      - name: Build and push
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: java-travelers
-        run: heroku plugins:install java && heroku create --no-remote && heroku deploy:jar staging/test-0.0.1-SNAPSHOT.jar --app java-travelers
+    - uses: actions/checkout@v2
+    - name: Setup PostgreSQL
+      uses: Harmon758/postgresql-action@v1.0.0
+      with:
+        postgresql version: 11
+        postgresql db: ${{ secrets.DATASOURCE_DB }}
+        postgresql user: ${{ secrets.DATASOURCE_USERNAME }}
+        postgresql password: ${{ secrets.DATASOURCE_PASSWORD }}
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
